@@ -1,4 +1,4 @@
-/*! CoursePress - v2.0.0
+/*! CoursePress - v2.0.4
  * https://premium.wpmudev.org/project/coursepress-pro/
  * Copyright (c) 2017; * Licensed GPLv2+ */
 var CoursePress = {};
@@ -1652,11 +1652,24 @@ $(document)
 				window.location = href;
 			}
 		});
+		return false;
+	};
+
+	var confirmManage= function() {
+		var href = $(this).data( 'link' ),
+			win = new CoursePress.WindowAlert({
+			type: 'prompt',
+			message: _coursepress.confirmed_edit,
+			callback: function() {
+				window.location = href;
+			}
+		});
 
 		return false;
 	};
 
 	$(document)
-		.on( 'click', '.cp-withdraw-student', confirmWithdrawal );
+		.on( 'click', '.cp-withdraw-student', confirmWithdrawal )
+		.on( 'click', '.coursepress-course-link', confirmManage );
 
 })(jQuery);
