@@ -7,6 +7,7 @@ CHANGELOG
 
 = 2.0.4 =
 -------------------------------------------------
+* Fixed a problem with "Manage Course" button.
 
 = 2.0.3 =
 -------------------------------------------------
